--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -12,4 +12,21 @@
 
 .header{
     background-color: #117425;
+    
+
 }
+
+    .header__title{
+        color: #F2F2F2;
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        padding: 30px;
+        text-align: left;
+}
+    .header__title--2{
+        color: #F2F2F2; 
+        font-family: Roboto;
+        font-weight: bold;
+        font-size: 36px;
+        display: block;
+ }
