--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -8,6 +8,7 @@
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    padding: 20px;
    
   
 }
@@ -63,7 +64,7 @@
   width: 100%;
 }
 .main > section:nth-child(2){
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
   max-width: 40%;
   width: 100%;
   display: flex;
@@ -87,4 +88,86 @@
  .itens__lista{
   padding-left: 20px;
  }
-    
+ .conceito{
+  background-color: #117A25;
+  border-radius: 5px;
+  width: 313px;
+  height: 159px;
+  margin-top: 60px;
+}
+.conteudo__conceito{
+  text-align: center;
+  font-size: 22px;
+  color: white;
+}
+.conteudo__nota{
+text-align: center;
+font-size: 22px;
+color: white;
+font-size: 38px;
+padding: 20px;
+}
+
+.curso{
+  display: flex;
+  flex-direction: column;
+}
+
+.coordenador{
+  text-align: center;
+  margin: 60px 0 0;
+
+}
+.titulo__coordenador{
+  font-size: 24px;
+  color: #00420C;
+  margin: 20px 0;
+}
+.foto__coordenador{
+  width: 172px;
+  border: 2px solid #00420C;;
+  border-radius: 5px;
+}
+.coordenador__nome{
+  font-size: 18px;
+  color: #00420C;
+  margin: 20px 0;
+}
+
+@media(min-width:600px){
+  .coordenador{
+    text-align: left;
+  }
+}
+
+
+.footer{
+display: flex;
+text-align: left;
+color: #ffff; 
+width: 100%;
+height: 249px;
+background: #00420C;
+
+}
+.imagen__footer{
+ width: 80px;
+ height: 100px;
+ margin-right: 80px;
+ margin-top: 30px;
+}
+.info__footer{
+  font-size: 16px;
+}
+.footer_campus{
+  font-weight: bold;
+  margin-top: 30px;
+}
+@media(max-width:600px){
+  .footer__org{
+    display: inline;
+  }
+}
+
+
+
